apps/monitoring/uptime-kuma/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  labels:
    name: uptime-kuma
    app: uptime-kuma
